--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.7z filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.extension filter=lfs diff=lfs merge=lfs -text
+
+#Video
+*.mp4               filter=lfs diff=lfs merge=lfs -text
+*.mov               filter=lfs diff=lfs merge=lfs -text
